fix: paddings for wrap

--- a/style.css
+++ b/style.css
@@ -217,7 +217,6 @@ body {
     .wrap {
         height: 90%;
         width: 90%;
-        padding: 50px 10px 90px;
     }
 
     .quote {
